[tool.poetry]
name = "conda-poetry-boilerplate"
version = "0.1.0"
description = ""
authors = ["aaronchenwei"]
readme = "README.md"
# packages = [{include = "conda_poetry_boilerplate"}]

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
conda-lock = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
